--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -3,14 +3,11 @@
   <button type="button" class="btn btn-outline-dark" (click)="increaseBy(-1)">
     -
   </button>
-  <button
-    *ngIf="counter !== 0"
-    type="button"
-    class="btn btn-outline-dark"
-    (click)="reset(0)"
-  >
+  @if (counter !== 0) {
+  <button type="button" class="btn btn-outline-dark" (click)="reset(0)">
     Reset
   </button>
+  }
   <button type="button" class="btn btn-outline-dark" (click)="increaseBy(1)">
     +
   </button>
