--- a/src/app/components/directive/directive.component.html
+++ b/src/app/components/directive/directive.component.html
@@ -1,1 +1,29 @@
-<p>directive works!</p>
+<h1>{{ title }}</h1>
+
+<div class="d-flex justify-content-center">
+  <span
+    class="border border-dark border-2 p-1 rounded"
+    (mouseenter)="toggleTextNgIf(pVNgIF)"
+  >
+    {{ pNgIf }}
+  </span>
+
+  <span
+    class="border border-dark border-2 p-1 rounded"
+    (mouseenter)="toggleTextIf(pVIF)"
+  >
+    {{ pIf }}
+  </span>
+</div>
+
+<div class="d-flex justify-content-center">
+  @if (displayTextNgIf) {
+  <span class="border border-danger border-2 p-1 rounded">
+    {{ pVNgIF }}
+  </span>
+  } @if (displayTextIf) {
+  <span class="border border-danger border-2 p-1 rounded">
+    {{ pVIF }}
+  </span>
+  }
+</div>
