completed funcionality directive-else

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,7 @@
 <hr />
 
 <app-components-directive></app-components-directive>
+
+<hr />
+
+<app-components-directive-else></app-components-directive-else>
